--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,14 @@
             <name>qe_core</name>
             <url>http://10.168.135.194:8081/repository/sqe_repo</url>
             <releases>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </releases>
             <snapshots>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
     <dependencies>
-        <dependency>
-            <groupId>com.sysco.qe</groupId>
-            <artifactId>syscoas400</artifactId>
-            <version>1.0</version>
-        </dependency>
-
         <dependency>
             <groupId>com.sysco.qe</groupId>
             <artifactId>qe_core</artifactId>
@@ -37,7 +31,7 @@
             <version>2.6</version>
         </dependency>
         <dependency>
-            <groupId>org.json</ groupId>
+            <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20080701</version>
         </dependency>
@@ -66,6 +60,7 @@
                             <source>1.7</source>
                             <target>1.7</target>
                         </configuration>
+                        <version>3.8.0</version>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -80,7 +75,7 @@
                             <systemProperties>
                                 <property>
                                     <name>update.dashboard</name>
-                                    <value>true</value>
+                                    <value>false</value>
                                 </property>
                             </systemProperties>
                         </configuration>
