--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
         <repository>
             <id>qe.sysco.repo.core</id>
             <name>qe_core</name>
-            <url>http://10.168.135.194:8081/repository/sqe_repo</url>
+            <!--<url>http://10.168.135.194:8081/repository/sqe_repo</url>-->
+            <url>http://qcenter.cake.net:8081/repository/qe.syscolab.repo.core/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -20,10 +21,15 @@
         </repository>
     </repositories>
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>com.sysco.qe</groupId>-->
+            <!--<artifactId>qe_core</artifactId>-->
+            <!--<version>0.0.2</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>com.sysco.qe</groupId>
-            <artifactId>qe_core</artifactId>
-            <version>0.0.2</version>
+            <groupId>com.syscolab.qe</groupId>
+            <artifactId>qe-core</artifactId>
+            <version>0.2.3</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
